--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
 <link href="popup.css" rel="stylesheet" type="text/css" />
 <script type="module" src="popup.js"></script>
 <div class="container">
@@ -11,7 +14,7 @@
                 <div class="ball"></div>
             </label>
         </div>
-        <div class="title">Fontimize</div>
+        <div class="title" style="font-family: 'DynaPuff', 'Ariel', sans-serif;">Fontimize</div>
         <img alt="Set Icon" class="profile" id="profile"></img>
         <div class="edit" id="edit">edit</div>
     </div>
