--- a/popup.html
+++ b/popup.html
@@ -59,7 +59,7 @@
     </div>
     <div class="btn-container">
         <button id="saveBtn" class="save-btn">Save</button>
-        <button id="resetBtn" class="save-btn">Reset</button>
+        <button id="resetBtn" class="reset-btn">Reset</button>
     </div>
 
 </div>
